@@ -1,10 +1,12 @@
 package sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.Services.Implementations;
 
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.DTOs.CrearEventoSolidarioDTO;
 import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.DTOs.ModificarEventoSolidarioDTO;
 import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.DTOs.EventoSolidarioDTO;
 import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.DTOs.MiembroDTO;
+import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.Mappers.UsuarioMapper;
 import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.Models.EventoSolidario;
 import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.Models.Usuario;
 import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.Mappers.EventoSolidarioMapper;
@@ -14,6 +16,7 @@ import sistemasDistribuidos.TP_SistemasDistribuidos_GrupoC.Services.Interfaces.I
 
 import java.time.LocalDateTime;
 import java.time.ZoneId;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -23,6 +26,7 @@ import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 
 @Service("eventoSolidarioService")
+@PreAuthorize("hasRole('PRESIDENTE') or hasRole('COORDINADOR')")
 @RequiredArgsConstructor
 public class EventoSolidarioService implements IEventoSolidarioService {
 
@@ -35,7 +39,7 @@ public class EventoSolidarioService implements IEventoSolidarioService {
     /// creo un evento solidario
     public EventoSolidarioDTO crearEventoSolidario(CrearEventoSolidarioDTO dto) {
         /// valido que la fecha sea posterior a la actual
-    	validarFechaEvento(dto.getFechaHora());
+        validarFechaEvento(dto.getFechaHora());
 
         /// valido y obtengo usuarios activos comparando con el listado del evento
         List<Usuario> miembros = validarYObtenerUsuariosActivos(dto.getMiembros());
@@ -100,9 +104,15 @@ public class EventoSolidarioService implements IEventoSolidarioService {
     @Override
     /// Obtengo todos los eventos solidarios
     public List<EventoSolidarioDTO> obtenerTodos() {
-        return eventoSolidarioRepository.findAll().stream()
-                .map(EventoSolidarioMapper::aEventoSolidarioDTO)
-                .collect(Collectors.toList());
+        List<EventoSolidario> listaEventosSolidarios = eventoSolidarioRepository.listAllEvents();
+        List<EventoSolidarioDTO> listaEventosSolidariosDTO = new ArrayList<>();
+        for (EventoSolidario eventoSolidario : listaEventosSolidarios) {
+            EventoSolidarioDTO eventoSolidarioDTO = EventoSolidarioMapper.aEventoSolidarioDTO(eventoSolidario);
+            listaEventosSolidariosDTO.add(eventoSolidarioDTO);
+            List<MiembroDTO> listMiembroDTO = eventoSolidario.getMiembros().stream().map(usuario -> UsuarioMapper.aMiembroDTO(usuario)).toList();
+            eventoSolidarioDTO.setMiembros(listMiembroDTO);
+        }
+        return listaEventosSolidariosDTO;
     }
 
     @Override
@@ -114,14 +124,14 @@ public class EventoSolidarioService implements IEventoSolidarioService {
         }
         return EventoSolidarioMapper.aEventoSolidarioDTO(eventoOpt.get());
     }
-    
+
     @Override
     ///  obtengo una entidad evento solidario por ID
     public EventoSolidario obtenerEntidadPorId(Long idEventoSolidario) {
         return eventoSolidarioRepository.findById(idEventoSolidario)
                 .orElseThrow(() -> new IllegalArgumentException("Evento solidario no encontrado."));
     }
-    
+
     /// valido y obtengo usuarios activos comparando con un listado
     private List<Usuario> validarYObtenerUsuariosActivos(List<MiembroDTO> miembrosDto) {
         List<String> emails = miembrosDto.stream().map(MiembroDTO::getEmail).toList();
@@ -135,11 +145,11 @@ public class EventoSolidarioService implements IEventoSolidarioService {
         }
         return usuarios;
     }
-    
+
     /// valido la fecha del evento
     private void validarFechaEvento(LocalDateTime fechaEvento) {
         LocalDateTime ahora = LocalDateTime.now(ZONE_ARG);
-        
+
         if (fechaEvento.isBefore(ahora)) {
             throw new IllegalArgumentException("La fecha del evento debe ser posterior a la fecha actual.");
         }
